Starting Project GUI
- Feature begining to works in the GUI
- Can play Player vs Player
- Player vs Bot isn't working, need to fix startNewBotGame method