@@ -1,130 +1,171 @@
-// src/main/java/core/model/Game.java
 package core.model;
 
+import core.gui.*;
+
 import java.util.*;
+import java.util.concurrent.ThreadLocalRandom;
+
 import core.persistence.ReplayLogger;
 
 /**
  * Core engine with built-in replay logging of purges.
+ * Human players do NOT auto-purge in Phase 1.
  */
 public class Game {
     private final List<Player> players;
-    private final boolean recordHistory;       // <— flag to enable in-memory history
-    private final List<GameState> history;     // <— the in-memory log
+    private final boolean recordHistory;
+    private final List<GameState> history;
     private final ReplayLogger replayLogger;
-    private int stepCounter, currentIndex;
-    private final Random rng = new Random();
+    private int stepCounter;
+    private int currentIndex;
+    private final List<Card> tablePairs = new ArrayList<>();
 
     public Game(List<Player> players) {
-        this(players, /* inMemory= */ true, /* fileLogger= */ null);
+        this(players, /* inMemory=*/true, /* fileLogger=*/null);
     }
 
-    /**
-     * @param players       list of ≥2 players
-     * @param inMemory      whether to keep an in-memory history
-     * @param fileLogger    if non-null, also write each step to file
-     */
     public Game(List<Player> players,
                 boolean inMemory,
                 ReplayLogger fileLogger) {
         if (players == null || players.size() < 2) {
             throw new IllegalArgumentException("Need at least two players");
         }
-        this.players       = Objects.requireNonNull(players);
-        this.recordHistory = inMemory;
-        // if inMemory, we get a real ArrayList; otherwise an unmodifiable empty list
-        this.history       = inMemory
-                ? new ArrayList<>()
-                : Collections.emptyList();
-        this.replayLogger  = fileLogger; // may be null
-        this.currentIndex  = rng.nextInt(players.size());
-        this.stepCounter   = 0;
+        this.players      = List.copyOf(players);
+        this.recordHistory= inMemory;
+        this.history      = inMemory ? new ArrayList<>() : Collections.emptyList();
+        this.replayLogger = fileLogger;
+        this.stepCounter  = 0;
+        this.currentIndex = -1;                   // safe until start()
     }
 
-    /** Phase 1: each player purges initial pairs—record who removed what. */
+    /** Phase 1: bots auto-purge, humans wait for your button. */
     public void start() {
+        // pick a random player to start Phase 2
+        boolean areBot = false;
+        int i=0;
+        // Phase 1: only bots auto-purge
         for (Player p : players) {
-            List<Card> removed = p.purgePairs();
-            recordState(p.getName() + " initial purge: " + removed);
+                if(!(p.getStrategy() instanceof HumanStrategy)) {
+                    areBot = true;
+                }
+                List<Card> removed = p.purgePairs();
+                tablePairs.addAll(removed);
+                recordState(p.getName() + " initial purge: " + removed);
+                i++;
+        }
+        if(!areBot) {
+            currentIndex = ThreadLocalRandom.current().nextInt(players.size());
+        }
+        else {
+            currentIndex = 1;
         }
     }
 
     /**
-     * One full phase-2 turn:
-     *   – pick next active player
-     *   – pick their next active neighbor
-     *   – execute draw+purge, record who removed what
+     * One full phase‐2 turn:
+     *   – move to next active player
+     *   – draw from their left neighbor
+     *   – purge that one
+     *   – log how many, and stop when game over
      */
     public boolean nextTurn() {
         if (isGameOver()) {
+            recordState("Game over");
             return false;
         }
 
+        // advance to next with cards
         currentIndex = findNextActive(currentIndex);
         Player current = players.get(currentIndex);
 
+        // pick their neighbor
         int neighborIdx = findNextActive(currentIndex);
         if (neighborIdx == currentIndex) {
-            // only one left
             recordState("Game over");
             return false;
         }
         Player left = players.get(neighborIdx);
 
+        // let them draw & purge
         List<Card> removed = current.takeTurn(left);
+        tablePairs.addAll(removed);
         recordState(current.getName() + " turn purge: " + removed);
-
         return true;
     }
 
     public boolean isGameOver() {
-        return players.stream().filter(p -> !p.hasNoCards()).count() <= 1;
+        // 1) check "only J♠" condition
+        for (Player p : players) {
+            if (p.getHandSize() == 1) {
+                Card only = p.getHand().get(0);
+                if (only.rank() == Rank.JACK && only.suit() == Suit.SPADES) {
+                    return true;
+                }
+            }
+        }
+        // 2) fallback: only one player still has any cards
+        long survivors = players.stream()
+                .filter(pl -> !pl.hasNoCards())
+                .count();
+        return survivors <= 1;
     }
 
+
     public Optional<Player> getLoser() {
-        if (!isGameOver()) return Optional.empty();
-        return players.stream().filter(p -> !p.hasNoCards()).findFirst();
+        // 1) check for the Pouilleux‐only loser:
+        for (Player p : players) {
+            if (p.getHandSize() == 1) {
+                Card only = p.getHand().get(0);
+                if (only.rank() == Rank.JACK && only.suit() == Suit.SPADES) {
+                    return Optional.of(p);
+                }
+            }
+        }
+        // 2) old logic: last one with cards
+        if (!isGameOver()) {
+            return Optional.empty();
+        }
+        return players.stream()
+                .filter(pl -> !pl.hasNoCards())
+                .findFirst();
+    }
+
+
+    public int getCurrentIndex() {
+        return currentIndex;
+    }
+
+    public List<Card> getAllTablePairs() {
+        return List.copyOf(tablePairs);
     }
 
     public List<GameState> getHistory() {
-        return recordHistory
-                ? List.copyOf(history)
-                : Collections.emptyList();
+        return recordHistory ? List.copyOf(history) : Collections.emptyList();
     }
 
-    /** logs a snapshot with a descriptive message */
+    /** Snapshot and optional file log */
     private void recordState(String desc) {
-        GameState state = new GameState(
+        GameState st = new GameState(
                 stepCounter++,
                 desc,
                 players.stream()
                         .map(p -> new PlayerSnapshot(p.getName(), p.getHand()))
                         .toList()
         );
-        if (recordHistory) {
-            history.add(state);
-        }
-        if (replayLogger != null) {
-            replayLogger.logState(state);
-        }
+        if (recordHistory) history.add(st);
+        if (replayLogger != null) replayLogger.logState(st);
     }
 
-
-    private List<PlayerSnapshot> snapshotPlayers() {
-        return players.stream()
-                .map(p -> new PlayerSnapshot(p.getName(), p.getHand()))
-                .toList();
-    }
-
-    /** finds next player index with cards, wrapping around */
+    /** wraparound to next non‐empty hand */
     private int findNextActive(int start) {
         int n = players.size();
-        for (int d = 1; d < n; d++) {
-            int idx = (start + d) % n;
+        for (int d = 1; d <= n; d++) {
+            int idx = (start + d + n) % n;
             if (!players.get(idx).hasNoCards()) {
                 return idx;
             }
         }
-        return start;
+        // fallback should never happen
+        return start < 0 ? 0 : start % n;
     }
 }
